k8s/app3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app3
        image: clsigmaaa/app3:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
