k8s/app3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3
spec:
  selector:
    app: app3
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
